# TerraLief

./: README.md  docker-compose.local.yml  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json
backend/drizzle/: 0000_fancy_wallop.sql  0000_pink_banshee.sql  0001_left_kulan_gath.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/src/: index.ts  openapi.ts
backend/src/controllers/: file.controller.ts  report.controller.ts  route.controller.ts  shelter.controller.ts  user.controller.ts
backend/src/core/: auth.ts  logger.ts  mailer.ts
backend/src/crons/: cleanup.cron.ts
backend/src/db/: index.ts
backend/src/exceptions/: http-exceptions.ts
backend/src/middlewares/: auth.middleware.ts
backend/src/models/: file.model.ts  report.model.ts  route.model.ts  shelter.model.ts  user.model.ts
backend/src/repositories/: file.repository.ts  report.repository.ts  route.repository.ts  shelter.repository.ts  user.repository.ts
backend/src/schemas/: report.schema.ts  route.schema.ts  shelter.schema.ts  user.schema.ts
backend/src/services/: file.service.ts  report.service.ts  route.service.ts  shelter.service.ts  (+1 more)
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
ml-services/: .dockerignore  Dockerfile  main.py  pyproject.toml
ml-services/app/: main.py
ml-services/app/api/: routes.py
ml-services/app/services/: estimation.py  ocr.py  parser.py
(+40 files in other folders)
