[project]
name = "ml-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pillow>=11.0.0",
    "easyocr>=1.7.2",
    "numpy>=2.2.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
